--- a/clusterProcessing.ipynb
+++ b/clusterProcessing.ipynb
@@ -503,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualData(data=data_transformed_scaled, time=data_transformed_scaled.index)"
+    "#visualData(data=data_transformed_scaled, time=data_transformed_scaled.index)"
    ]
   },
   {
@@ -512,17 +512,182 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Avoid division by zero by replacing zeros in the denominator\n",
+    "epsilon = 1e-10  # A small constant to prevent division by zero\n",
+    "\n",
     "# Waist-to-Weight Ratio\n",
-    "data_transformed_scaled['waist_to_weight_ratio'] = data_transformed_scaled['waistline'] / data_transformed_scaled['weight']\n",
+    "data_transformed_scaled['waist_to_weight_ratio'] = (\n",
+    "    data_transformed_scaled['waistline'] / (data_transformed_scaled['weight'] + epsilon)\n",
+    ")\n",
     "\n",
     "# Pulse Pressure\n",
-    "data_transformed_scaled['pulse_pressure'] = data_transformed_scaled['SBP'] - data_transformed_scaled['DBP']\n",
+    "data_transformed_scaled['pulse_pressure'] = (\n",
+    "    data_transformed_scaled['SBP'] - data_transformed_scaled['DBP']\n",
+    ")\n",
     "\n",
     "# Cholesterol Ratio\n",
-    "data_transformed_scaled['cholesterol_ratio'] = data_transformed_scaled['tot_chole'] / data_transformed_scaled['HDL_chole']\n",
+    "data_transformed_scaled['cholesterol_ratio'] = (\n",
+    "    data_transformed_scaled['tot_chole'] / (data_transformed_scaled['HDL_chole'] + epsilon)\n",
+    ")\n",
     "\n",
     "# AST/ALT Ratio\n",
-    "data_transformed_scaled['ast_alt_ratio'] = data_transformed_scaled['SGOT_AST'] / data_transformed_scaled['SGOT_ALT']"
+    "data_transformed_scaled['ast_alt_ratio'] = (\n",
+    "    data_transformed_scaled['SGOT_AST'] / (data_transformed_scaled['SGOT_ALT'] + epsilon)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_cat_aligned = data_cat.loc[data_transformed_scaled.index]\n",
+    "\n",
+    "# Combine the aligned data\n",
+    "data_new = pd.concat([data_cat_aligned, data_transformed_scaled], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = data_new['SMK_stat_type_cd']\n",
+    "data_new.drop('SMK_stat_type_cd', axis=1, inplace=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_new.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for NaN values\n",
+    "print(\"Are there NaN values?\")\n",
+    "print(data_new.isna().sum())\n",
+    "\n",
+    "# Check for Infinite values\n",
+    "print(\"Are there infinite values?\")\n",
+    "print(np.isinf(data_new).sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PCA\n",
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA()\n",
+    "principal_components = pca.fit_transform(data_new)\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "pca_df = pd.DataFrame(data=principal_components, columns=[f'PC{i+1}' for i in range(principal_components.shape[1])])\n",
+    "\n",
+    "print(pca_df.head())\n",
+    "# Explained variance\n",
+    "explained_variance = pca.explained_variance_ratio_\n",
+    "\n",
+    "# Cumulative explained variance\n",
+    "cumulative_variance = np.cumsum(explained_variance)\n",
+    "\n",
+    "print(\"Explained Variance by Component:\", explained_variance)\n",
+    "print(\"Cumulative Explained Variance:\", cumulative_variance)\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.plot(range(1, len(explained_variance) + 1), cumulative_variance, marker='o', linestyle='--')\n",
+    "plt.xlabel('Number of Principal Components')\n",
+    "plt.ylabel('Cumulative Explained Variance')\n",
+    "plt.title('Scree Plot')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=3)\n",
+    "df_pca = pca.fit(data_new)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(9,5))\n",
+    "plt.scatter(x=[i+1 for i in range(len(df_pca.explained_variance_ratio_))], y=df_pca.explained_variance_ratio_, s=200, alpha=0.75, c='red')\n",
+    "plt.grid(True)\n",
+    "plt.title(\"Explained variance ratio of the \\nfitted principal component vector\\n\")\n",
+    "plt.xlabel(\"Principal components\", fontsize=15)\n",
+    "plt.xticks([i+1 for i in range(len(df_pca.explained_variance_ratio_))], fontsize=13)\n",
+    "plt.yticks(fontsize=15)\n",
+    "plt.ylabel(\"Varaiance ratio\", fontsize=15)\n",
+    "# plt.show()\n",
+    "\n",
+    "df_trans = pca.transform(data_new)\n",
+    "df_trans = pd.DataFrame(data=df_trans)\n",
+    "df_combined = pd.concat([data_new, df_trans, y], axis=1)\n",
+    "# print(df_combined.head(10))\n",
+    "columns1=df_combined.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=3)\n",
+    "principal_components = pca.fit_transform(data_new)\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "pca_df = pd.DataFrame(data=principal_components, columns=['PC1', 'PC2', 'PC3'])\n",
+    "\n",
+    "pca_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler()\n",
+    "pca_minmax_scaled = scaler.fit_transform(principal_components)\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "pca_minmax_df = pd.DataFrame(pca_minmax_scaled, columns=['PC1', 'PC2', 'PC3'])\n",
+    "pca_minmax_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_proc = pd.concat([pca_minmax_df, data_new], axis=1)\n",
+    "data_test = pd.concat([data_proc, y], axis=1)"
    ]
   },
   {
@@ -533,11 +698,55 @@
    "source": [
     "#feature extraction\n",
     "import seaborn as sns\n",
-    "correlation_matrix = data_transformed_scaled.corr()\n",
-    "plt.figure(figsize=(8, 6))\n",
+    "correlation_matrix = data_test.corr()\n",
+    "plt.figure(figsize=(16, 10))\n",
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
     "plt.title('Correlation Matrix')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Features and target\n",
+    "X = data_test[['PC1', 'PC2', 'PC3', 'sex_Male', 'DRK_YN_Y']]  # Feature columns\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Print the shapes of the splits\n",
+    "print(\"Training Features Shape:\", X_train.shape)\n",
+    "print(\"Testing Features Shape:\", X_test.shape)\n",
+    "print(\"Training Target Shape:\", y_train.shape)\n",
+    "print(\"Testing Target Shape:\", y_test.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.to_csv('train/X_train_cluster.csv', index=False)\n",
+    "y_train.to_csv('train/y_train_cluster.csv', index=False)\n",
+    "\n",
+    "X_test.to_csv('test/X_test_cluster.csv', index=False)\n",
+    "y_test.to_csv('test/y_test_cluster.csv', index=False)"
    ]
   }
  ],
