some small changed to outlier handling

--- a/clusterProcessing.ipynb
+++ b/clusterProcessing.ipynb
@@ -380,24 +380,27 @@
     "data = data[data['SGOT_ALT'] <= 1000] \n",
     "data = data[data['SGOT_AST'] <= 1000]  \n",
     "data = data[data['BLDS'] >= 40] \n",
-    "data = data[data['BLDS'] <= 400] \n",
+    "data = data[data['BLDS'] <= 600] \n",
+    "data = data[data['gamma_GTP'] <= 1000]\n",
     "data = data[data['HDL_chole'] >= 16] \n",
     "data = data[data['waistline'] >= 30] \n",
     "data = data[data['waistline'] <= 200] \n",
-    "data = data[data['serum_creatinine'] >= 0.25] \n",
+    "data = data[data['serum_creatinine'] <= 10] \n",
     "data = data[data['tot_chole'] >= 80]\n",
+    "data = data[data['tot_chole'] <= 311.54]\n",
     "data = data[data['DBP'] >= 46.38] \n",
     "data = data[data['SBP'] >= 78.8] \n",
-    "data = data[data['hemoglobin'] >= 9.48] \n",
+    "data = data[data['hemoglobin'] >= 6] \n",
+    "data = data[data['LDL_chole'] <= 204] \n",
     "\n",
-    "data['gamma_GTP'] = np.where(data['gamma_GTP'] > 400, 400, data['gamma_GTP'])  # Cap high values\n",
+    "#data['gamma_GTP'] = np.where(data['gamma_GTP'] > 400, 400, data['gamma_GTP'])  # Cap high values\n",
     "data['triglyceride'] = np.where(data['triglyceride'] > 500, 500, data['triglyceride'])\n",
     "data['HDL_chole'] = np.where(data['HDL_chole'] > 96, 96, data['HDL_chole'])\n",
-    "data['LDL_chole'] = np.where(data['LDL_chole'] > 204, 204, data['LDL_chole'])\n",
+    "#data['LDL_chole'] = np.where(data['LDL_chole'] > 204, 204, data['LDL_chole'])\n",
     "data['sight_left'] = np.where(data['sight_left'] > 1.95, 1.95, data['sight_left'])\n",
     "data['sight_right'] = np.where(data['sight_right'] > 1.95, 1.95, data['sight_right'])\n",
-    "data['serum_creatinine'] = np.where(data['serum_creatinine'] > 20, 20, data['serum_creatinine'])\n",
-    "data['tot_chole'] = np.where(data['tot_chole'] > 500, 500, data['tot_chole'])\n",
+    "data['serum_creatinine'] = np.where(data['serum_creatinine'] < 0.25, 0.25, data['serum_creatinine'])\n",
+    "#data['tot_chole'] = np.where(data['tot_chole'] > 500, 500, data['tot_chole'])\n",
     "data['DBP'] = np.where(data['DBP'] > 105.72, 105.72, data['DBP'])\n",
     "data['SBP'] = np.where(data['SBP'] > 166, 166, data['SBP'])\n",
     "data['hemoglobin'] = np.where(data['hemoglobin'] > 18.98, 18.98, data['hemoglobin'])"
